			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2780 2005/07/13 11:32:29 keiichi Exp $

<200507>
Wed Jul 13 20:26:31 JST 2005	keiichi@iijlab.net
	* kame/kame/ndp/ndp.c
	fixed the proxy directive to work properly.

2005-07-04  SUZUKI, Shinsuke <suz@kame.net>
	* freebsd5/sys/netinet/ip_fw2.c
	  FreeBSD Security Advisory FreeBSD-SA-05:13.ipfw
	* freebsd5/sys/netinet/{tcp_input.c, tcp_var.h}:
	  FreeBSD Security Advisory FreeBSD-SA-05:15.tcp

<200506>
2005-06-22  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* freebsd5/sys/netinet6/in6_pcb.c (init_sin6): corrected argument
	to sa6_recoverscope().  The previous code since June 17th's change
	could modify invalid memory space (while the possibility should be
	very rare) so upgrading is necessary.

2005-06-20  NISHIDA, Yoshifumi <nishida@csl.sony.co.jp>
    * kame/sys/netinet/dccp.h kame/sys/netinet/dccp_tcplike.c
      kame/sys/netinet/dccp_tcplike.h kame/sys/netinet/dccp_usrreq.c
      kame/sys/netinet/dccp_var.h kame/sys/netinet6/dccp6_usrreq.c: 
	preliminary update to conform to the draft-ietf-dccp-spec-11.txt

2005-06-20  Tsuyoshi MOMOSE  <momose@az.jp.nec.com>
	* kame/sys/netinet6/nd6.c: Units of comparison to determine default
	router expiration are mismateched. This problem was reported and
	modified by Alan Chang <ccchang@zyxel.com.tw>.

2005-06-17  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/in6_ifattach.c (in6_ifattach): do not
	auto-configure link-local addresses on loopback or PPP interfaces.
	The latter is based on a comment from Francis Dupont.

2005-06-17  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/nd6.c (nd6_need_cache): perform NUD on PPP
	interfaces.

2005-06-17  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* {kame,*bsd}/sys/(various files): revised scope-related
	interfaces, clarifying the relationship between the
	kernel-internal form and the public sockaddr_in6 form.  Details
	are described in kame/IMPLEMENTATION.  External behavior basically